--- a/filmes/templates/filmes/lista_filmes.html
+++ b/filmes/templates/filmes/lista_filmes.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Filmes</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <h1>Lista de Filmes</h1>
-    <ul>
-        {% for filme in filmes %}
-            <li>
-                {{ filme.Title }} ({{ filme.Year }})
-            </li>
-        {% empty %}
-            <li>Nenhum filme encontrado.</li>
-        {% endfor %}
-    </ul>
+
+    <h1 style="text-align: center; color: red;">Lista de Filmes</h1>
+
+
+    <div class="table-container">
+        <ul>
+            {% for filme in filmes %}
+                <li>
+                    <span>{{ filme.Title }}</span> 
+                    <small>({{ filme.Year }})</small>
+                </li>
+            {% empty %}
+                <li>Nenhum filme encontrado.</li>
+            {% endfor %}
+        </ul>
+    </div>
+
 </body>
 </html>
