--- a/filmes/templates/filmes/lista_pessoal.html
+++ b/filmes/templates/filmes/lista_pessoal.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
-<head>
+<head>    
+    <link rel="stylesheet" href="{% static 'css/listafilmes.css' %}">
     <title>Minha Lista de Filmes</title>
     <script>
         function exibirCampoSenha() {
@@ -31,6 +33,18 @@
     </script>
 </head>
 <body>
+    <div class="navbar">
+        <div class="logo">
+            <a href="{% url 'filmes:inicio' %}" style="color: white; text-decoration: none;">MovieList</a>
+        </div>
+        
+        <div class="user-info">
+            <form action="{% url 'filmes:logout' %}" method="post" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn">Logout</button>
+            </form>            
+        </div>
+    </div>
     <h1>Minha Lista de Filmes</h1>
     
     <button onclick="exibirCampoSenha()">Editar</button>
